apps/count-down-up-days/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter
  namespace: count-down-up-days
spec:
  selector:
    app: counter
  ports:
    - name: http
      port: 3000
      targetPort: http
